--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 		<head>
-				<meta charset="utf-8">
-				<title>The Whale</title>
-				<link rel="stylesheet" href="whale.css">
+			<meta charset="utf-8">
+			<title>The Whale</title>
+			<link rel="stylesheet" href="whale.css">
 		</head>
 		<body>
-				<script src="whale.js"></script>
+			<script src="jquery-1.11.3.min.js"></script>
+			<script src="whale.js"></script>
 		</body>
 </html>
